--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   },
   "version": "1.0.0",
   "main": "lib/no-dropping-the-ra.js",
+  "files": [
+    "lib",
+    "src"
+  ],
   "directories": {
     "test": "test"
   },
