--- a/package.json
+++ b/package.json
@@ -28,12 +28,17 @@
   "description": "ら抜き言葉を検出するtextlint rule",
   "devDependencies": {
     "babel": "^5.8.34",
-    "espower-babel": "^3.3.0",
+    "babel-cli": "^6.1.18",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.1.20",
+    "babel-preset-es2015": "^6.1.18",
+    "espower-babel": "^4.0.0",
     "mocha": "^2.3.3",
-    "power-assert": "^1.1.0",
+    "power-assert": "^1.2.0",
     "textlint-tester": "^0.4.0"
   },
   "dependencies": {
-    "kuromoji": "0.0.4"
+    "kuromoji": "0.0.4",
+    "kuromojin": "^1.0.1",
+    "textlint-rule-helper": "^1.1.4"
   }
 }
