--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,13 @@
 {
-    "presets": ["es2015"],
-    "plugins": ["transform-es2015-modules-commonjs"]
+  "presets": [
+    "es2015"
+  ],
+  "env": {
+    "development": {
+      "presets": [
+        "jsdoc-to-assert",
+        "power-assert"
+      ]
+    }
+  }
 }
