--- a/package.json
+++ b/package.json
@@ -31,13 +31,14 @@
   ],
   "description": "ら抜き言葉を検出するtextlint rule",
   "devDependencies": {
-    "babel": "^5.8.34",
-    "babel-cli": "^6.1.18",
+    "babel-cli": "^6.10.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.1.20",
-    "babel-preset-es2015": "^6.1.18",
-    "espower-babel": "^4.0.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-jsdoc-to-assert": "^2.0.1",
+    "babel-preset-power-assert": "^1.0.0",
+    "babel-register": "^6.9.0",
     "mocha": "^2.3.3",
-    "power-assert": "^1.2.0",
+    "power-assert": "^1.4.1",
     "textlint-tester": "^1.2.0"
   },
   "dependencies": {
