--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "test": "mocha"
   },
   "keywords": [
-    "textlint"
+    "textlint",
+    "textlintrule"
   ],
   "description": "ら抜き言葉を検出するtextlint rule",
   "devDependencies": {
