--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "test": "test"
   },
   "scripts": {
-    "build": "NODE_ENV=production babel src --out-dir lib --source-maps",
-    "watch": "babel src --out-dir lib --watch --source-maps",
+    "build": "textlint-scripts build",
+    "watch": "textlint-scripts build --watch",
     "prepublish": "npm run --if-present build",
-    "test": "mocha"
+    "test": "textlint-scripts test"
   },
   "keywords": [
     "textlint",
@@ -32,15 +32,11 @@
   ],
   "description": "ら抜き言葉を検出するtextlint rule",
   "devDependencies": {
-    "babel-cli": "^6.10.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.1.20",
-    "babel-preset-es2015": "^6.9.0",
     "babel-preset-jsdoc-to-assert": "^2.0.1",
     "babel-preset-power-assert": "^1.0.0",
-    "babel-register": "^6.9.0",
-    "mocha": "^2.3.3",
     "power-assert": "^1.4.1",
-    "textlint-tester": "^1.2.0"
+    "textlint-scripts": "^2.1.0"
   },
   "dependencies": {
     "kuromojin": "^1.2.1",
