--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "build": "textlint-scripts build",
     "watch": "textlint-scripts build --watch",
     "prepublish": "npm run --if-present build",
-    "test": "textlint-scripts test"
+    "test": "textlint-scripts test",
+    "prettier": "prettier --write \"**/*.{js,jsx,ts,tsx,css}\""
   },
   "keywords": [
     "textlint",
@@ -35,11 +36,30 @@
     "babel-plugin-transform-es2015-modules-commonjs": "^6.1.20",
     "babel-preset-jsdoc-to-assert": "^2.0.1",
     "babel-preset-power-assert": "^1.0.0",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.0",
     "power-assert": "^1.4.1",
+    "prettier": "^1.15.3",
     "textlint-scripts": "^2.1.0"
   },
   "dependencies": {
     "kuromojin": "^1.2.1",
     "textlint-rule-helper": "^1.1.4"
+  },
+  "prettier": {
+    "singleQuote": false,
+    "printWidth": 120,
+    "tabWidth": 4
+  },
+  "husky": {
+    "hooks": {
+      "precommit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,css}": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
