--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "husky": "^4.3.0",
     "lint-staged": "^10.5.4",
     "power-assert": "^1.4.1",
-    "prettier": "^2.1.2",
+    "prettier": "^2.2.1",
     "textlint-scripts": "^3.0.0"
   },
   "dependencies": {
@@ -46,7 +46,8 @@
   "prettier": {
     "singleQuote": false,
     "printWidth": 120,
-    "tabWidth": 4
+    "tabWidth": 4,
+    "trailingComma": "none"
   },
   "husky": {
     "hooks": {
