--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "watch": "textlint-scripts build --watch",
     "prepublish": "npm run --if-present build",
     "test": "textlint-scripts test",
-    "prettier": "prettier --write \"**/*.{js,jsx,ts,tsx,css}\""
+    "prettier": "prettier --write \"**/*.{js,jsx,ts,tsx,css}\"",
+    "prepare": "git config --local core.hooksPath .githook"
   },
   "keywords": [
     "textlint",
@@ -33,7 +34,6 @@
   ],
   "description": "ら抜き言葉を検出するtextlint rule",
   "devDependencies": {
-    "husky": "^4.3.0",
     "lint-staged": "^10.5.4",
     "power-assert": "^1.4.1",
     "prettier": "^2.2.1",
@@ -56,8 +56,7 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,css}": [
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ]
   }
 }
