--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "watch": "textlint-scripts build --watch",
     "prepublish": "npm run --if-present build",
     "test": "textlint-scripts test",
-    "prettier": "prettier --write \"**/*.{js,jsx,ts,tsx,css}\""
+    "prettier": "prettier --write \"**/*.{js,jsx,ts,tsx,css}\"",
+    "prepare": "git config --local core.hooksPath .githook"
   },
   "keywords": [
     "textlint",
@@ -33,30 +34,23 @@
   ],
   "description": "ら抜き言葉を検出するtextlint rule",
   "devDependencies": {
-    "husky": "^4.3.0",
-    "lint-staged": "^10.4.2",
-    "power-assert": "^1.4.1",
-    "prettier": "^2.1.2",
+    "lint-staged": "^10.5.4",
+    "prettier": "^2.2.1",
     "textlint-scripts": "^3.0.0"
   },
   "dependencies": {
-    "kuromojin": "^2.0.0",
+    "kuromojin": "^3.0.0",
     "textlint-rule-helper": "^2.1.1"
   },
   "prettier": {
     "singleQuote": false,
     "printWidth": 120,
-    "tabWidth": 4
-  },
-  "husky": {
-    "hooks": {
-      "precommit": "lint-staged"
-    }
+    "tabWidth": 4,
+    "trailingComma": "none"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,css}": [
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ]
   }
 }
